--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,30 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  table_calendar: ^2.3.1
+  localization: ^2.1.0
+
+  flutter_signin_button: ^2.0.0
+  shared_preferences: ^2.0.15
+  dio: ^4.0.6
+  flutter_svg: ^1.1.6
+  carousel_pro: ^1.0.0
+  url_launcher: ^6.1.7
+  google_maps_flutter: ^2.1.5
+
+  intl: ^0.17.0
+  datetime_picker_formfield: any
+  date_time_picker: ^2.1.0
+  provider: ^4.3.2
+  http: ^0.13.0
+
+  # connect db
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.4
+  firebase_storage: ^11.0.6
+  cloud_firestore: ^4.1.0
+  firebase_messaging: ^14.1.2
+
 
 dev_dependencies:
   flutter_test:
