--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  image_picker: ^0.8.6
   table_calendar: ^2.3.1
   localization: ^2.1.0
 
