--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: tdvpnext
 description: A new Flutter project.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: ">=2.18.5 <3.0.0"
 
 dependencies:
   flutter:
@@ -14,6 +14,7 @@ dependencies:
   image_picker: ^0.8.6
   table_calendar: ^2.3.1
   localization: ^2.1.0
+  avatar_view: ^1.0.1
 
   flutter_signin_button: ^2.0.0
   shared_preferences: ^2.0.15
@@ -36,6 +37,12 @@ dependencies:
   cloud_firestore: ^4.1.0
   firebase_messaging: ^14.1.2
 
+  firebase_messaging_platform_interface: any
+  firebase_storage_platform_interface: any
+  cloud_functions_platform_interface: any
+  cloud_firestore_platform_interface: any
+  firebase_auth_platform_interface: any
+  firebase_database_platform_interface: any
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +58,7 @@ flutter:
     - assets/images/
     - assets/images/board/
     - assets/images/icons/
-    
+
   fonts:
     - family: THSarabunNew
       fonts:
